Fixes drop down activation not to shift the rest of the page down.

--- a/tool-ui/src/main/webapp/style/v3/drop-down.less
+++ b/tool-ui/src/main/webapp/style/v3/drop-down.less
@@ -54,6 +54,7 @@
 input[type="text"].dropDown-search {
   .text;
 
+  display: block;
   overflow: hidden;
   width: 100%;
 
